# ardupilot_ros2_gazebo_garden

./: .gitignore  3 install ros2_mavros_mavlink  3 install ros2_mavros_mavlink.md  README.md  install ardupilot and mavproxy  install ardupilot and mavproxy.md  mav.parm  mav.tlog  mav.tlog.raw  readme2.md  requirements.txt
ardupilot_mavros_launch/: apm_config.yaml
instructions/: 2. install ardupilot and mavproxy.md  3 install ros2_mavros_mavlink.md  4. runningthefile.md  4. runningthefile.txt
src/my_testing/src/my_world/: CMakeLists.txt
src/my_testing/src/my_world/launch/: camera.launch.py
src/my_testing/src/my_world/world/: hello_world.sdf
src/my_world/: CMakeLists.txt  package.xml
src/my_world/hooks/: my_world.dsv.in
src/my_world/launch/: bridge.launch.py  camera.launch.py  main.launch.py
src/my_world/model/: camera_sensor2.sdf
src/my_world/model/camera/: model.config  model.sdf
src/my_world/models/camera2/: model.config  model.sdf
src/my_world/worlds/: came_world.sdf
src/tutorial_1/: CMakeLists.txt  README.md  package.xml
src/tutorial_1/hooks/: tutorial_1.dsv.in
src/tutorial_1/launch/: gazebo.launch.py  main.launch.py  mavros_node.launch.py  node.launch
src/tutorial_1/model_sensors/rgb_camera/: model.sdf
src/tutorial_1/model_sensors/rgbd_cam/: model.config
src/tutorial_1/models/iris_ardu_camera/: model.config
src/tutorial_1/scripts/: gimbal_controller.py
src/tutorial_1/worlds/: diff_drive.sdf  iris_world.sdf
src/tutorial_2/: CMakeLists.txt  HardwareSetup.drawio  Untitled Diagram.drawio  package.xml  references.md
src/tutorial_2/config/gazebo_configs/: full.yaml
src/tutorial_2/config/mavros_configs/: apm_config.yaml  apm_pluginlists.yaml  params.yaml  real_params.yaml  sim_params.yaml
src/tutorial_2/config/mission_planner_configs/: betterWPLatest.waypoints  lla_coor.txt  tree_coordsWps.waypoints  xyz_coor.txt
src/tutorial_2/launch/: camera_bridge.launch.py  camera_rgbd_bridge.launch.py  copy.launch.py  gazebo.launch.py  joints_bridge.launch.py  load_world.launch.py  main.launch.py  mavros_node.launch.py  node.launch.xml  nodes.launch.py  real_mavros_node.launch.py  sim_mavros_node.launch.py
src/tutorial_2/model_sensors/gimbal_edit_2d/: model.sdf
src/tutorial_2/model_sensors/rgb_cam/: model.config  model.sdf
src/tutorial_2/model_sensors/rgbd_cam/: model.config  model.sdf
src/tutorial_2/models/custom_ground_plane/: model.sdf
src/tutorial_2/models/grasspatch/: model.sdf
src/tutorial_2/models/iris_ardu_camera/: model.sdf
src/tutorial_2/models/iris_with_ardupilot2/: model.sdf
src/tutorial_2/models/palm_estate/: model.config  model.sdf
src/tutorial_2/models/palm_tree_young_mature/: model.config  model.sdf
src/tutorial_2/models/rgbd_cam/: model.sdf
src/tutorial_2/rviz/: camera.rviz
src/tutorial_2/scripts/: examples.py  geo_helper.py  helper.py  main.py  math_helper.py  object_detection.py  spawn_palm_tree.py
src/tutorial_2/scripts/helper_funcs/: ardu_helper.py  arducopter.py  camera_helper.py  geo_helper.py  math_helper.py  object_detection.py  point_cloud_v1.py  pymavlink_helper.py  quinsegment.py  ros_helper.py  test.py  test2.py
src/tutorial_2/scripts/helper_funcs/sort_kalman_filter/: draw_labels.py  kalmanFilterBetter.py  sort_hungarian_KF.py
src/tutorial_2/worlds/: iris_runway2.sdf  iris_world.sdf  palm_estate.sdf  palm_estate_2.sdf  palm_estate_3.sdf
