<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>tutorial_2</name>
	<version>0.0.0</version>
	<description>Ardupilot Gazebo and ROS2.</description>
	<maintainer email="chngdickson@gmail.com">rhys</maintainer>
	<license>Apache 2.0</license>

	<!-- Ros2 python and cpp -->
	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>rclcpp</depend>
	<depend>rclpy</depend>

	<!-- Garden default-->
	<exec_depend condition="$GZ_VERSION == garden">gz-sim7</exec_depend>
	<exec_depend condition="$GZ_VERSION == ''">gz-sim7</exec_depend>
	<!-- Fortress -->
	<exec_depend condition="$GZ_VERSION == fortress or $IGNITION_VERSION == fortress">ignition-gazebo6</exec_depend>
	<!-- Edifice -->
  	<exec_depend condition="$GZ_VERSION == edifice or $IGNITION_VERSION == edifice">ignition-gazebo5</exec_depend>

	<!-- ROS Libraries -->
	<exec_depend>ros_gz_sim</exec_depend>
	<exec_depend>ros_gz_bridge</exec_depend>
	<exec_depend>ros_gz_image</exec_depend>
	<exec_depend>tf2_ros</exec_depend>
	<exec_depend>rqt_image_view</exec_depend>
	<exec_depend>rqt_plot</exec_depend>
	<exec_depend>rqt_topic</exec_depend>
	<exec_depend>rviz2</exec_depend>
	<exec_depend>sdformat_urdf</exec_depend>
	<exec_depend>xacro</exec_depend>

	<!-- Python Libraries -->
	<exec_depend>transforms3d</exec_depend>

	<!-- Code tests -->
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<test_depend>ament_pep257</test_depend>
	<test_depend>ament_flake8</test_depend>
	<test_depend>python3-pytest</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>